# shuka-opd-intake

./: .env.example  .gitignore  .vercelignore  BLOG.md  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
eval/: agreement.py  grounding.py  perturb.py  report_template.html  run_eval.py  wiring_check.py
eval/corpus/: sample_hinglish.json
eval/corruption/: laterality_flip.json  negation_drop_fever.json  negation_spurious.json  number_dhai_to_two.json  number_dropped.json
eval/gaps/: category_denial_case.json  leading_zero.json  vernacular_recall.json
eval/realclips/: CONSENT.md
fixtures/: complaint_hinglish.structure.json  complaint_hinglish.transcribe.json  complaint_hinglish.translate.json  complaint_tamil.structure.json  complaint_tamil.transcribe.json  complaint_tamil.translate.json  prescription.vision_extract.json  prescription.vision_gate.json
samples/: README.md
src/shuka/: __init__.py  asr.py  cli.py  config.py  followup.py  gaps.py  merge.py  pipeline.py  readback.py  render.py  sarvam.py  schema.py  server.py  structure.py  verify.py  vision.py
src/shuka/lexicons/: collapse_map.json  common_words.json  echo_patterns.json  event_verbs.json  festivals.json  laterality.json  negation.json  phenomenology.json  quantities.json  register_tokens.json  (+1 more)
tests/: conftest.py  test_agreement.py  test_asr.py  test_followup.py  test_gaps.py  test_perturb.py  test_pipeline.py  test_readback.py  test_sarvam.py  test_schema.py  test_server.py  test_structure.py  test_verify.py  test_vision.py  test_wiring.py
web/: index.html
