[project]
name = "shuka"
version = "0.1.0"
description = "OPD pre-consult voice intake: verified, gap-aware, Indic-first"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "typer>=0.12,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.29,<1",
    "sarvamai>=0.1",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8,<9",
    "ruff>=0.4,<1",
]

[project.scripts]
shuka = "shuka.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shuka"]
